media/prowlarr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prowlarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
